[gd_scene load_steps=3 format=3 uid="uid://lbxx182g06op"]

[ext_resource type="Script" path="res://utils/pause_menu.gd" id="1_xw6m0"]
[ext_resource type="PackedScene" uid="uid://bjyjjo540rljm" path="res://utils/options_menu.tscn" id="2_sh0fa"]

[node name="pause_menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_xw6m0")

[node name="Panel" type="Panel" parent="."]
offset_left = 256.0
offset_top = 116.0
offset_right = 384.0
offset_bottom = 244.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4

[node name="resume" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Resume"

[node name="options" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="quit" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Quit
"

[node name="options_menu" parent="." instance=ExtResource("2_sh0fa")]
visible = false

[connection signal="button_up" from="Panel/VBoxContainer/resume" to="." method="_on_button_button_up"]
[connection signal="button_up" from="Panel/VBoxContainer/options" to="." method="_on_options_button_up"]
[connection signal="button_up" from="Panel/VBoxContainer/quit" to="." method="_on_quit_button_up"]
[connection signal="closed_options" from="options_menu" to="." method="_on_options_menu_closed_options"]
